feat: started CryptoCart coding

--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Amazon-Dapp",
+  "name": "CryptoCart",
   "version": "1.0.0",
   "description": "Decentralized e-Commerce Platform like Amazon",
   "main": "index.js",
