--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metamask/providers": "^17.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ethers": "5.7.2",
     "lucide-react": "^0.417.0",
     "next": "14.2.5",
     "react": "^18",
