--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@metamask/providers": "^17.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.51.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ethers": "5.7.2",
